Optimize get method